--- a/13.5.ipynb
+++ b/13.5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "1024a92d-cf47-43f9-839f-c680270b16f3",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "[731 rows x 14 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "5373d8f5-6617-4ce8-b9b4-b24d02b12d73",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "f5fd4c32-4c43-4fa8-a5f1-eb4a4ec10e0a",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "626d9b49-04b2-4436-a9bb-10331d59b33b",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1165,7 @@
        "difference_temp -0.310423 -0.599254         1.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "ecb53b73-0576-4eb4-8466-be6b52d25b8d",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "cf1e823e-51a0-4e8b-8d45-d2bea28e38ec",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "669f2f92-5117-443f-9de7-b130e38e503a",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "f92e7501-6302-46a1-bbe1-6e4327fffa5d",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "d3b69070-db4d-4b25-a871-6245a105bff7",
    "metadata": {},
    "outputs": [],
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "3c2c4117-e041-4e9f-a126-ceba3a7d176c",
    "metadata": {},
    "outputs": [
@@ -5846,7 +5846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "2041a169-79f4-4960-b337-f6fab0f67255",
    "metadata": {},
    "outputs": [],
@@ -5856,7 +5856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "542cb158-a728-4869-a68c-2dfda2b6b1e3",
    "metadata": {},
    "outputs": [],
@@ -5883,7 +5883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "1cb713d9-58c3-43f3-8ccd-5e7b67f199f0",
    "metadata": {},
    "outputs": [
@@ -5950,7 +5950,7 @@
        "Linear Regression                   490.206354  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5985,7 +5985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "ce728a43-1a25-488d-8742-009fc447dbaf",
    "metadata": {},
    "outputs": [
@@ -6028,7 +6028,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
+   "id": "d751aeaf-eedd-4440-9588-a05395c28fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Linear Regression:\n",
+    "#Na  wykresie Prognozy vs wartości prawdziwe - Linear punkty są rozproszone wokół linii idealnej prognozy, ale istnieje wiele odchyleń. Pokazuje to, że model liniowy nie jest w stanie dokładnie przewidzieć wielu wartości, co jest normalne przy używaniu prostego modelu liniowego.\n",
+    "#Skoro metryki są obliczane na zbiorze testowym, odzwierciedla to bardziej realistyczną wydajność modelu na niewidzianych danych.\n",
+    "#Polynomial Regression:\n",
+    "\n",
+    "#Na drugim widać bardziej złożony obraz. Mimo że model lepiej dopasowuje się do danych treningowych (ponieważ metryki są obliczane na całym zbiorze), pokazuje on większe odchylenia dla wyższych wartości predykcji.\n",
+    "#Ten wykres sugeruje przeuczenie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f7612b30-36ec-458c-8c84-a730e4933de8",
    "metadata": {},
    "outputs": [
@@ -6073,13 +6089,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "71ba7ca9-eef1-4bf9-b5aa-7c828cf67ddd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Model liniowy ma trudności z przewidywaniem wartości rzeczywistych, szczególnie dla wyższych wartości. Reszty pokazują systematyczne niedoszacowanie, a model nie w pełni uchwytuje zależności w danych. \n",
-    "#Model wielomianowy lepiej dopasowuje się do danych, ale może generować ekstremalne wartości prognoz i istnieje pewna struktura w resztach, co może sugerować przeuczenie dla niektórych danych."
+    "#Linear Regression:\n",
+    "#Wykres dla modelu liniowego pokazuje, że reszty są rozproszone wokół zera, ale mają tendencję do zwiększania się wraz ze wzrostem wartości rzeczywistych. To jest typowe dla modeli liniowych na rzeczywistych danych, gdzie nie wszystkie wzorce mogą być uchwycone przez liniową zależność.\n",
+    "#Ponieważ metryki są obliczane na zbiorze testowym, pokazuje to realistyczne błędy modelu na niewidzianych danych.\n",
+    "#Polynomial Regression:\n",
+    "\n",
+    "#Wykres reszt dla modelu wielomianowego pokazuje wyraźny wzorzec, co sugeruje przeuczenie. Reszty mają strukturę, co wskazuje, że model dopasowuje się do szumu w danych treningowych.\n",
+    "#Ponieważ metryki są obliczane na całym zbiorze, wykres reszt pokazuje, jak dobrze model dopasował się do danych, które już zna, ale może to nie odzwierciedlać jego rzeczywistej wydajności na nowych danych."
    ]
   },
   {
